<resources>
    <string name="app_name">DailyMood2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_mood_choice">MoodChoice</string>
    <string name="title_activity_mood_history">MoodHistory</string>
    <string name="no_worse_mood">It doesn\'t get any worse than this!</string>
    <string name="no_better_mood">It doesn\'t get any better than this!</string>
    <string name="enter_a_note">Enter a note for today</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
