...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityMoodHistory"
    android:orientation="vertical"
    android:id="@+id/root_container">

    <FrameLayout
        android:id="@+id/progress_day_7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".142857">
...
